tests/NormalTests/paczka1/fuzzy1/96064870.err
Error in line 5: Whnrtj S211 83,9
Error in line 13: K9VOZkPCEU S211 85,4
Error in line 9: 0rWwK S758 82,3
Error in line 18: 0rWwK S211 20,7
Error in line 19: 0rWwK S448 68,2
Error in line 14: CXkyS S448 22,5
Error in line 21: Zbslr1A S211 5,1
